[IMP] web: fix no-content helper scroll view overflow

--- a/addons/web/static/src/views/view.scss
+++ b/addons/web/static/src/views/view.scss
@@ -20,6 +20,7 @@
 .o_view_nocontent {
     @include o-position-absolute(0, 0, 0, 0);
     pointer-events: none;
+    overflow: auto;
     z-index: var(--o-view-nocontent-zindex, 1);
     display: flex;
     align-items: center;
