--- a/addons/web/static/src/webclient/webclient_layout.scss
+++ b/addons/web/static/src/webclient/webclient_layout.scss
@@ -77,6 +77,9 @@ html {
         height: 100%;
         direction: ltr;
       }
+      .o_renderer.o_empty {
+        overflow: hidden;
+      }
     }
   }
 
